Complete RAG Chatbot - initial clean commit

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,13 @@ ENV/
 env/
 .venv/
 
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
 # IDE
 .idea/
 .vscode/
